# aenima

./: .env.base  .env.example  .gitignore  AGENTS.md  CNAME  Cargo.toml  README.md  docker-compose.yaml  index.html  lefthook.yml  local  pyproject.toml  settings.py
crates/anima/: Cargo.toml
crates/anima-core/: Cargo.toml
crates/anima-core/src/: lib.rs
crates/anima/migrations/: 20260101000000_init.sql
crates/anima/src/: config.rs  main.rs  state.rs  telemetry.rs
crates/anima/src/audio/: input.rs  mod.rs  output.rs
crates/anima/src/conversation/: gemini_live.rs  local.rs  mod.rs  openai_realtime.rs  session.rs
crates/anima/src/debug_server/: mod.rs
crates/anima/src/debug_server/static/: dashboard.html
crates/anima/src/memory/: embed.rs  ingest.rs  mod.rs  store.rs
crates/anima/src/retrieval/: mod.rs  rag.rs  tools.rs
docs/: overview.md
model-server/: README.md
tasks/: __init__.py  daemon.py  dev.py  repo.py
